<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#121212"
    tools:context=".RegistrationActivity">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_person_white_opacity"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin"
            app:civ_border_width="3dp"
            app:civ_border_color="@android:color/darker_gray"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:hint="@string/email_address">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxBackgroundColor="@android:color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:hint="@string/pass">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:layout_marginTop="@dimen/min_padding"
            android:background="@drawable/buttonstyle"
            android:text="@string/register"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:textSize="13sp"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_marginEnd="3dp"
                android:text="@string/already_have_account"/>
            <TextView
                android:id="@+id/login_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:textSize="13sp"
                android:textColor="@color/colorAccent2"
                android:textAlignment="center"
                android:text="@string/login_here"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>